--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,11 @@
 }
 
 .bg-radial-mask {
-  background: radial-gradient(circle, rgba(0,0,0,0.4) 10%, rgba(0,0,0,0.8) 100%);
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 10%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
 }
 
 .first-delay {
