finished the galary page

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,13 @@
 .preserve-3d {
   transform-style: preserve-3d;
 }
+
+.table_shop tr{
+  border: 1px solid rgb(78, 78, 78);
+}
+
+.table_shop tr td{
+  padding: 8px;
+  color: white;
+  font-family: "Poppins";
+}
